Add group first
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/joplin-server/Dockerfile
+++ b/apps/joplin-server/Dockerfile
@@ -60,7 +60,7 @@ RUN BUILD_SEQUENCIAL=1 yarn install --inline-builds \
 FROM node:18-bullseye-slim
 
 ARG user=elfie
-RUN useradd --create-home --uid 568 --gid 568 --shell /bin/bash $user
+RUN groupadd -g 568 $user && useradd --create-home --uid 568 --gid 568 --shell /bin/bash $user
 
 
 USER $user
