--- a/apps/jfa-go/Dockerfile
+++ b/apps/jfa-go/Dockerfile
@@ -1,4 +1,4 @@
-FROM hrfee/jfa-go as upstream
+FROM hrfee/jfa-go:${VERSION} as upstream
 FROM golang:latest
 
 COPY --from=upstream /opt/jfa-go /opt/jfa-go
