--- a/apps/lidarr/Dockerfile
+++ b/apps/lidarr/Dockerfile
@@ -17,7 +17,7 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 USER root
 
 #hadolint ignore=DL3018
-RUN apk add --no-cache ca-certificates chromaprint icu-libs libintl sqlite-libs xmlstarlet
+RUN apk add --no-cache ca-certificates chromaprint ffmpeg icu-libs libintl sqlite-libs xmlstarlet
 #hadolint ignore=DL3059
 RUN \
     case "${TARGETPLATFORM}" in \
