Retry adding httprpc plugin
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/rutorrent/Dockerfile
+++ b/apps/rutorrent/Dockerfile
@@ -7,7 +7,7 @@ RUN cd /var/www/rutorrent && \
     git clone https://github.com/nelu/rutorrent-filemanager.git plugins/filemanager && \
     cd /tmp && \
     git clone https://github.com/Novik/ruTorrent.git && \
-    mv /tmp/ruTorrent/plugins/httprpc /var/www/rutorrent/plugins/ && \
+    cp -rf /tmp/ruTorrent/plugins/httprpc /var/www/rutorrent/plugins/ && \
     rm -rf /tmp/ruTorrent && \
     apk del --force-broken-world git && \
     curl -o /tmp/filebot.xz -L "https://get.filebot.net/filebot/FileBot_5.0.1/FileBot_5.0.1-portable.tar.xz" && \
