--- a/apps/wallabag/ci/goss.yaml
+++ b/apps/wallabag/ci/goss.yaml
@@ -3,15 +3,22 @@
 process:
   nginx:
     running: true    
+  php-fpm:
+    running: true
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
 port:
   # https://github.com/aelsabbahy/goss/issues/149
   tcp6:8000:
     listening: true
+  tcp6:9000:
+    listening: true    
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
 http:
   http://localhost:8000:
     status: 200
     timeout: 5000
+  http://localhost:9000:
+    status: 200
+    timeout: 5000    
