--- a/apps/wallabag/ci/goss.yaml
+++ b/apps/wallabag/ci/goss.yaml
@@ -7,17 +7,17 @@ process:
     running: true
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
-port:
-  # https://github.com/aelsabbahy/goss/issues/149
-  tcp6:8000:
-    listening: true
+# port:
+#   # https://github.com/aelsabbahy/goss/issues/149
+#   tcp6:8000:
+#     listening: true
 
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
-# http:
-#   http://localhost:8000:
-#     status: 200
-#     timeout: 5000
-#   http://localhost:9000:
-#     status: 200
-#     timeout: 5000    
+http:
+  http://localhost:8000:
+    status: 200
+    timeout: 5000
+  # http://localhost:9000:
+  #   status: 200
+  #   timeout: 5000    
