Update for consistent permissions at least
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/wallabag/Dockerfile
+++ b/apps/wallabag/Dockerfile
@@ -7,9 +7,13 @@ RUN sed -i 's/listen 80/listen 8000/' /etc/nginx/nginx.conf
 # Add elfie
 RUN \
     addgroup -S elfie --gid 568 \
-        && adduser -S elfie -G elfie --uid 568 \
+        && adduser -S elfie -G elfie --uid 568
 
 # We use "elfie" as our user, not "nobody"
 RUN chown -R elfie:elfie /var/www/wallabag && \
     sed -i 's/nobody/elfie/' /entrypoint.sh && \
     sed -i 's/nobody/elfie/' /etc/php81/php-fpm.conf
+
+# half-baked attempt to avoid running as root
+# COPY apps/wallabag/entrypoint.sh /
+# USER 568
