--- a/apps/autoscan/Dockerfile
+++ b/apps/autoscan/Dockerfile
@@ -1,10 +1,6 @@
-FROM cloudb0x/autoscan:latest as upstream
+FROM cloudb0x/autoscan:${VERSION} as upstream
 
-FROM ghcr.io/geek-cookbook/alpine-s6-overlay:3.1.6.2
-
-ARG TARGETOS
-ARG TARGETARCH
-ARG TARGETVARIANT
+FROM ghcr.io/geek-cookbook/alpine:rolling@sha256:6b59b2060ffbb6af76654aae9f5185fbfdfb08b2532d0186f3b14e8ad26b7598 
 
 ENV \
   PATH="/app/autoscan:${PATH}" \
@@ -12,14 +8,15 @@ ENV \
   AUTOSCAN_DATABASE="/config/autoscan.db" \
   AUTOSCAN_LOG="/config/activity.log" \
   AUTOSCAN_VERBOSITY="0"
+  HOME="/config" \
+  XDG_CONFIG_HOME="/config" \
+  XDG_DATA_HOME="/config"
 
 # Copy autoscan binary from upstream
 RUN mkdir /app/autoscan
 COPY --from=upstream /app/autoscan/autoscan /app/autoscan/autoscan
-COPY --from=upstream /etc/services.d/autoscan/run /etc/services.d/autoscan/run
 
-# Volume
-VOLUME ["/config"]
-
-# Port
 EXPOSE 3030
+
+ENTRYPOINT ["/app/autoscan/autoscan"]
+
