--- a/apps/autoscan/Dockerfile
+++ b/apps/autoscan/Dockerfile
@@ -1,3 +1,4 @@
+ARG VERSION
 FROM cloudb0x/autoscan:${VERSION} as upstream
 
 FROM ghcr.io/geek-cookbook/alpine:rolling@sha256:6b59b2060ffbb6af76654aae9f5185fbfdfb08b2532d0186f3b14e8ad26b7598 
