--- a/apps/autoscan/ci/goss.yaml
+++ b/apps/autoscan/ci/goss.yaml
@@ -13,5 +13,5 @@ port:
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
 http:
   http://localhost:3030:
-    status: 200
+    status: 404 # this is what our dummy / default config.yml will result in
     timeout: 5000
