--- a/apps/rdtclient/Dockerfile
+++ b/apps/rdtclient/Dockerfile
@@ -1,5 +1,5 @@
 # Stage 1 - Build the frontend
-FROM node:16-alpine3.17 AS node-build-env
+FROM node:18-alpine3.18 AS node-build-env
 ARG VERSION
 ARG TARGETPLATFORM
 ENV TARGETPLATFORM=${TARGETPLATFORM:-linux/amd64}
@@ -9,7 +9,7 @@ ENV BUILDPLATFORM=${BUILDPLATFORM:-linux/amd64}
 RUN mkdir /appclient
 WORKDIR /appclient
 
-RUN apk add --no-cache git
+RUN apk add --no-cache git python3 py3-pip make g++
 
 RUN \
    echo "**** Cloning Source Code ****" && \
@@ -22,7 +22,7 @@ RUN \
 RUN ls -FCla /appclient/root
 
 # Stage 2 - Build the backend
-FROM mcr.microsoft.com/dotnet/sdk:6.0-bullseye-slim-amd64 AS dotnet-build-env
+FROM mcr.microsoft.com/dotnet/sdk:8.0-bookworm-slim-amd64 AS dotnet-build-env
 ARG TARGETPLATFORM
 ENV TARGETPLATFORM=${TARGETPLATFORM:-linux/amd64}
 ARG BUILDPLATFORM
@@ -61,9 +61,23 @@ RUN \
     echo "**** Updating package information ****" && \
     apk update && \
     echo "**** Install pre-reqs ****" && \
-    apk add bash icu-libs krb5-libs libgcc libintl libssl1.1 libstdc++ zlib && \
+    apk add bash icu-libs krb5-libs libgcc libintl libstdc++ zlib && \
     echo "**** Installing dotnet ****" && \
-    apk add aspnetcore6-runtime && \
+	mkdir -p /usr/share/dotnet
+
+RUN \
+   if [ "$TARGETPLATFORM" = "linux/arm/v7" ] ; then \
+      wget https://download.visualstudio.microsoft.com/download/pr/c3bf3103-efdb-42e0-af55-bbf861a4215b/dc22eda8877933b8c6569e3823f18d21/aspnetcore-runtime-8.0.0-linux-musl-arm64.tar.gz && \
+      tar zxf aspnetcore-runtime-8.0.0-linux-musl-arm64.tar.gz -C /usr/share/dotnet ; \
+   elif [ "$TARGETPLATFORM" = "linux/arm/v8" ] ; then \
+      wget https://download.visualstudio.microsoft.com/download/pr/c3bf3103-efdb-42e0-af55-bbf861a4215b/dc22eda8877933b8c6569e3823f18d21/aspnetcore-runtime-8.0.0-linux-musl-arm64.tar.gz && \
+      tar zxf aspnetcore-runtime-8.0.0-linux-musl-arm64.tar.gz -C /usr/share/dotnet ; \
+   else \
+      wget https://download.visualstudio.microsoft.com/download/pr/7aa33fc7-07fe-48c2-8e44-a4bfb4928535/3b96ec50970eee414895ef3a5b188bcd/aspnetcore-runtime-8.0.0-linux-musl-x64.tar.gz && \
+      tar zxf aspnetcore-runtime-8.0.0-linux-musl-x64.tar.gz -C /usr/share/dotnet ; \
+   fi
+	
+RUN \
     echo "**** Setting permissions ****" && \
     chown -R 568:568 /storage && \
     rm -rf \
