Another navidrome fix
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/navidrome/Dockerfile
+++ b/apps/navidrome/Dockerfile
@@ -12,7 +12,7 @@ RUN apk add --no-cache ca-certificates
 #hadolint ignore=DL3059
 RUN \
     case "${TARGETPLATFORM}" in \
-        'linux/amd64') export ARCH='x86_64' ;; \
+        'linux/amd64') export ARCH='amd64' ;; \
         'linux/arm64') export ARCH='arm64' ;; \
     esac \
     && \
