don't double-test calibre, goss
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/calibre/ci/goss.yaml
+++ b/apps/calibre/ci/goss.yaml
@@ -9,6 +9,6 @@ http:
   http://localhost:8080:
     status: 200
 
-port:
-  tcp:8080:
-    listening: true
+# port:
+#   tcp:8080:
+#     listening: true
