--- a/apps/zurg/ci/goss.yaml
+++ b/apps/zurg/ci/goss.yaml
@@ -10,8 +10,8 @@ port:
   tcp6:9999:
     listening: true
 
-# https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
-http:
-  http://localhost:9999:
-    status: 200
-    timeout: 5000
+# # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
+# http:
+#   http://localhost:9999:
+#     status: 200
+#     timeout: 5000
