zurg wants logs
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/zurg/Dockerfile
+++ b/apps/zurg/Dockerfile
@@ -6,6 +6,8 @@ WORKDIR /app
 
 VOLUME /config
 
+RUN mkdir /config/logs
+
 COPY --from=upstream /app/zurg /app/
 COPY --from=upstream /app/config.yml /config/
 
