Update WORKDIR for zurg
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/zurg/Dockerfile
+++ b/apps/zurg/Dockerfile
@@ -2,11 +2,11 @@ ARG VERSION
 FROM ghcr.io/debridmediamanager/zurg-testing:${VERSION} as upstream
 FROM ghcr.io/geek-cookbook/alpine:rolling@sha256:6b59b2060ffbb6af76654aae9f5185fbfdfb08b2532d0186f3b14e8ad26b7598 
 
-WORKDIR /app
+WORKDIR /config
 
-VOLUME /config
+RUN mkdir /app
 
 COPY --from=upstream /app/zurg /app/
 COPY --from=upstream /app/config.yml /config/
 
-ENTRYPOINT ["/app/zurg", "--config", "/config/config.yml"]
+ENTRYPOINT ["/app/zurg"]
