--- a/apps/gluetun/Dockerfile
+++ b/apps/gluetun/Dockerfile
@@ -1,5 +1,5 @@
 ARG VERSION
-FROM qdm12/gluetun:v${VERSION} as upstream
+FROM qmcgaw/gluetun:v${VERSION} as upstream
 
 COPY apps/gluetun/entrypoint.sh /
 ENTRYPOINT ["/entrypoint.sh"]
