Add dig to guletun
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/gluetun/Dockerfile
+++ b/apps/gluetun/Dockerfile
@@ -1,5 +1,7 @@
 ARG VERSION
 FROM qmcgaw/gluetun:v${VERSION} as upstream
 
+RUN apk --no-cache add bind-tools 
+
 COPY apps/gluetun/entrypoint.sh /
 ENTRYPOINT ["/entrypoint.sh"]
