--- a/apps/tooling/Dockerfile
+++ b/apps/tooling/Dockerfile
@@ -61,7 +61,8 @@ RUN \
     /tmp/splash-cli.tar.gz -L \
     "https://github.com/rawnly/splash-cli/releases/download/${SPLASH_CLI_VERSION}/splash_${SPLASH_CLI_VERSION}_linux_amd64.tar.gz" && \
   tar zxvpf /tmp/splash-cli.tar.gz && \
-  mv /tmp/splash /usr/local/bin
+  mv splash /usr/local/bin && \
+  rm README
 
 RUN curl -fSsL https://www.postgresql.org/media/keys/ACCC4CF8.asc | gpg --dearmor | tee /usr/share/keyrings/postgresql.gpg > /dev/null && \
 	echo deb [arch=amd64,arm64,ppc64el signed-by=/usr/share/keyrings/postgresql.gpg] http://apt.postgresql.org/pub/repos/apt/ focal-pgdg main | tee -a /etc/apt/sources.list.d/postgresql.list && \
