--- a/apps/sabnzbd/Dockerfile
+++ b/apps/sabnzbd/Dockerfile
@@ -1,7 +1,8 @@
+FROM ghcr.io/onedr0p/par2cmdline-turbo:1.1.1 as par2cmdline-turbo
+
 FROM ghcr.io/geek-cookbook/alpine:rolling@sha256:6b59b2060ffbb6af76654aae9f5185fbfdfb08b2532d0186f3b14e8ad26b7598 
 
 ARG TARGETPLATFORM
-ARG BUILDPLATFORM
 ARG VERSION
 ARG CHANNEL
 
@@ -11,12 +12,12 @@ ENV \
     PIP_ROOT_USER_ACTION=ignore \
     PIP_NO_CACHE_DIR=1 \
     PIP_DISABLE_PIP_VERSION_CHECK=1 \
+    PIP_BREAK_SYSTEM_PACKAGES=1 \
     CRYPTOGRAPHY_DONT_BUILD_RUST=1
 
 ENV SABNZBD__PORT=8080
 
-SHELL ["/bin/bash", "-o", "pipefail", "-c"]
-
+# Download source
 RUN \
     curl -fsSL "https://github.com/sabnzbd/sabnzbd/releases/download/${VERSION}/SABnzbd-${VERSION}-src.tar.gz" \
         | tar xzf - -C /app --strip-components=1 \
@@ -25,15 +26,14 @@ RUN \
     && chmod -R 755 /app \
     && rm -rf /tmp/*
 
-#hadolint ignore=DL3018,DL3013
+# Install sabnzbd
 RUN \
     # Keep py3-pip installed
     \
     apk add --no-cache \
         ca-certificates \
         python3 \
-        py3-pip \ 
-        par2cmdline \
+        py3-pip \
         p7zip \
     && \
     apk add --no-cache --virtual=.build-deps \
@@ -53,6 +53,13 @@ RUN \
         /root/.cargo \
         /tmp/*
 
+# Install par2cmdline-turbo
+COPY --from=par2cmdline-turbo /usr/local/bin/par2 /usr/local/bin/par2
+RUN ln -s /usr/local/bin/par2 /usr/local/bin/par2create \
+    && ln -s /usr/local/bin/par2 /usr/local/bin/par2repair \
+    && ln -s /usr/local/bin/par2 /usr/local/bin/par2verify
+
+# Install filebot
 RUN curl -o /tmp/filebot.xz -L "https://get.filebot.net/filebot/FileBot_5.0.1/FileBot_5.0.1-portable.tar.xz" && \
     mkdir -p /opt/filebot && \
     tar xvf /tmp/filebot.xz -C /opt/filebot && \
