Update versioning for plex-debrid
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/plex-debrid/ci/goss.yaml
+++ b/apps/plex-debrid/ci/goss.yaml
@@ -3,7 +3,7 @@
 process:
   python:
     running: true
-  xterm:
+  xfce4-terminal:
     running: true    
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
