Update location of settings.json
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/plex-debrid/Dockerfile
+++ b/apps/plex-debrid/Dockerfile
@@ -6,11 +6,11 @@ RUN apk add --update --no-cache python3 git xfce4-terminal && \
     pip3 install -r ./plex_debrid/requirements.txt
 
 RUN addgroup -S elfie --gid 568 \
-        && adduser -S elfie -G elfie --uid 568
-
+        && adduser -S elfie -G elfie --uid 568 && \
+        mkdir /elfhosted-config
 
 ENV PUID=568 PGID=568 \
-  HOME="/config" \
+  HOME="/tmp" \
   TITLE="Plex-Debrid | ElfHosted" \
   QTWEBENGINE_DISABLE_SANDBOX="1"
 
