--- a/apps/plex-debrid/Dockerfile
+++ b/apps/plex-debrid/Dockerfile
@@ -5,12 +5,10 @@ RUN apk add --update --no-cache python3 git xfce4-terminal && \
     git clone https://github.com/itsToggle/plex_debrid && \
     pip3 install -r ./plex_debrid/requirements.txt
 
-RUN addgroup -S elfie --gid 568 \
-        && adduser -S elfie -G elfie --uid 568
 
-ENV PUID=568 PGID=568 \
-  HOME="/tmp" \
-  TITLE="Plex-Debrid | ElfHosted" \
+ENV TITLE="Plex-Debrid | ElfHosted" \
   QTWEBENGINE_DISABLE_SANDBOX="1"
 
 COPY apps/plex-debrid/root /
+COPY apps/plex-debrid/root /
+
