--- a/apps/plex-debrid/ci/goss.yaml
+++ b/apps/plex-debrid/ci/goss.yaml
@@ -3,7 +3,7 @@
 process:
   python:
     running: true
-  xfce4-terminal:
+  xterm:
     running: true    
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
