Laster doesn't use releases
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/rdtclient/laster13/Dockerfile
+++ b/apps/rdtclient/laster13/Dockerfile
@@ -13,7 +13,7 @@ RUN apk add --no-cache git python3 py3-pip make g++
 
 RUN \
    echo "**** Cloning Source Code ****" && \
-   git clone --depth 1 --branch ${VERSION} https://github.com/laster13/rdt-client.git . && \
+   git clone --depth 1 https://github.com/laster13/rdt-client.git . && \
    cd client && \
    echo "**** Building Code  ****" && \
    npm ci && \
