--- a/apps/zurg/Dockerfile
+++ b/apps/zurg/Dockerfile
@@ -4,8 +4,11 @@ FROM ghcr.io/geek-cookbook/alpine:rolling@sha256:6b59b2060ffbb6af76654aae9f5185f
 
 WORKDIR /config
 
+# Needed for the plex-update script
+RUN apk add --no-cache python3
+
 COPY --from=upstream /app/zurg /app/
-COPY --from=upstream /app/plex-update.sh /app/
+COPY --from=upstream /app/plex_update.sh /app/
 COPY --from=upstream /app/config.yml /config/
 
 COPY ./apps/zurg/entrypoint.sh /entrypoint.sh
