Use channel var more effectively
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/torrentio/Dockerfile
+++ b/apps/torrentio/Dockerfile
@@ -1,14 +1,17 @@
 FROM node:16-alpine
 
+ARG CHANNEL
+ARG VERSION
+
 RUN apk update && apk upgrade && \
     apk add --no-cache git
 
 WORKDIR /home/node/app
 
 RUN git clone https://github.com/Pukabyte/torrentio-scraper-sh.git /tmp/source && \
-    cp /tmp/source/package*.json ./ && \
+    cp /tmp/source/${CHANNEL}/package*.json ./ && \
     npm ci --only-production && \
-    cp /tmp/source/addon . && \
+    cp /tmp/source/${CHANNEL} . && \
     rm -rf /tmp/source
 
 CMD [ "node", "--insecure-http-parser", "index.js" ]
