Attempted torrentio updates
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/torrentio/addon/Dockerfile
+++ b/apps/torrentio/addon/Dockerfile
@@ -8,7 +8,7 @@ RUN apk update && apk upgrade && \
 
 WORKDIR /home/node/app
 
-RUN git clone https://github.com/Pukabyte/torrentio-scraper-sh.git /tmp/source && \
+RUN git clone https://github.com/geek-cookbook/torrentio.elfhosted.com.git /tmp/source && \
     cp /tmp/source/${CHANNEL}/package*.json ./ && \
     npm ci --only-production && \
     cp -rf /tmp/source/${CHANNEL}/* . && \
