--- a/apps/torrentio/ci/goss.yaml
+++ b/apps/torrentio/ci/goss.yaml
@@ -1,18 +1,16 @@
 ---
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#process
 process:
-  python:
+  node:
     running: true
-  xterm:
-    running: true    
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
 port:
   # https://github.com/aelsabbahy/goss/issues/149
-  tcp:3000:
+  tcp:7001:
     listening: true
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
 http:
-  http://localhost:3000:
+  http://localhost:7001:
     status: 200
