--- a/apps/stremio-jackett/Dockerfile
+++ b/apps/stremio-jackett/Dockerfile
@@ -1,6 +1,5 @@
-FROM node:latest
+FROM ghcr.io/geek-cookbook/alpine-node:20@sha256:34e579ce8fd045ec28105d0ee720e6d4b8fd332ebeb8d4890784b8b991d51e29
 
-ARG CHANNEL
 ARG VERSION
 
 ENV PORT 7001
