--- a/apps/jackett/ci/goss.yaml
+++ b/apps/jackett/ci/goss.yaml
@@ -1,8 +1,8 @@
 ---
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#process
-process:
-  Jackett:
-    running: true
+# process:
+#   Jackett:
+#     running: true
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
 port:
